minor unrelated changes